fix(kit): `MultiSelect` fix `valueContent` overflow (#4824)

--- a/projects/kit/components/input-tag/input-tag.style.less
+++ b/projects/kit/components/input-tag/input-tag.style.less
@@ -94,12 +94,8 @@
 .t-icons {
     display: flex;
     align-items: center;
-    padding: 0 0 0 0.75rem;
-    padding-inline-start: 0.75rem;
-    padding-inline-end: 0;
 
     &_left {
-        padding: 0;
         margin: 0 0.75rem 0 -0.5rem;
         margin-inline-start: -0.5rem;
         margin-inline-end: 0.75rem;
